@@ -1,3 +1,11 @@
+2002-10-11  Morten Welinder  <terra@diku.dk>
+
+	* src/numbers.h (finitegnum): Attempt a solution for the
+	finite/isfinite/FINITE circus.  (All callers should just use
+	finitegnum.)
+
+	* src/mathfunc.c (gpow2): Use ldexpgnum when available.
+
 2002-10-10  Jody Goldberg <jody@gnome.org>
 
 	* src/expr-sheet.c (value_intersection) : move here and privatize.
